[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0.8", features=["derive"]}
eframe = "0.19.0"
egui = "0.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
egui_glium = "0.14"
egui_web = "0.14"
chrono = "0.4"
fltk = "1.4.17"
nfd = "0.0.4"
plotters = "0.3"
fltk-theme = "0.7"
